# Copyright 2026 The Project Contributors
# SPDX-License-Identifier: MIT

load("@contrib_rules_jvm//java:defs.bzl", "java_junit5_test")
load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_kotlin//kotlin:lint.bzl", "ktlint_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//tools/kotlin:spring.bzl", "spring_allopen_plugins")

package(default_visibility = ["//visibility:private"])

sh_test(
    name = "bpmnerAppJarStructureTest",
    srcs = ["jar_structure_test.sh"],
    args = ["$(location //src:bpmner_app.jar)"],
    data = ["//src:bpmner_app.jar"],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "bpmnerAppRunfilesDataTest",
    srcs = ["runfiles_data_test.sh"],
    args = ["$(location //src:bpmner_app)"],
    data = ["//src:bpmner_app"],
    visibility = ["//visibility:public"],
)

kt_jvm_library(
    name = "bpmner_tests_lib",
    srcs = glob(["kotlin/**/*.kt"]),
    associates = ["//src:bpmner_core"],
    plugins = spring_allopen_plugins(),
    resources = glob(["resources/**"]),
    deps = [
        "@maven//:com_embabel_agent_embabel_agent_test",
        "@maven//:com_tngtech_archunit_archunit",
        "@maven//:org_camunda_bpm_model_camunda_bpmn_model",
        "@maven//:org_graalvm_polyglot_js",
        "@maven//:org_graalvm_polyglot_polyglot",
        "@maven//:org_jetbrains_kotlin_kotlin_reflect",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit5",
        "@maven//:org_jmolecules_integrations_jmolecules_archunit",
        "@maven//:org_springframework_boot_spring_boot_starter_test",
        "@maven//:org_springframework_modulith_spring_modulith_starter_test",
        "@rules_java//java/runfiles",
    ],
)

java_binary(
    name = "update_prompt_baselines",
    main_class = "dev.groknull.bpmner.prompt.UpdatePromptBaselinesKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":bpmner_tests_lib"],
)

filegroup(
    name = "analysis_srcs",
    srcs = glob(["kotlin/**/*.kt"]),
    visibility = ["//visibility:public"],
)

JUNIT5_DEPS = [
    "@maven//:org_junit_jupiter_junit_jupiter_engine",
    "@maven//:org_junit_platform_junit_platform_launcher",
    "@maven//:org_junit_platform_junit_platform_reporting",
]

# --- Tier 1: Fast pure-unit tests (the majority) ---
_UNIT_TESTS = glob(
    ["kotlin/**/*Test.kt"],
    exclude = [
        # Declared explicitly below (need shard_count or unique timeout)
        "**/BpmnContractFidelityCheckerTest.kt",
        "**/BpmnPatchApplierTest.kt",
        "**/PklRuleCatalogTest.kt",
        "**/DeterministicPrimitivesTest.kt",
        "**/BpmnDefinitionValidatorTest.kt",
        "**/TopologyHandlersTest.kt",
        "**/BpmnXmlToDefinitionConverterTest.kt",
        "**/BpmnDefinitionToXmlConverterTest.kt",
        # Spring-context tests (different timeout + tag tier)
        "**/BpmnerModulithTest.kt",
        "**/BpmnerModuleBoundariesTest.kt",
        "**/BpmnConfigBindingTest.kt",
        "**/RepairStartupValidationTest.kt",
        "**/GenerationModuleTest.kt",
        "**/ValidationModuleTest.kt",
        "**/BpmnWebControllerTest.kt",
        "**/BpmnAgentFlowSystemTest.kt",
        "**/BpmnGuardrailSystemTest.kt",
        "**/BpmnRepairAgentIntegrationTest.kt",
        # Special cases (unique needs)
        "**/BpmnNlpConcurrencyTest.kt",
        "**/*SmokeTest.kt",
        "**/ActiveLiveLlmProfileCondition.kt",
        "**/UpdatePromptBaselines.kt",  # main(), not a test
    ],
)

[java_junit5_test(
    name = src.split("/")[-1].replace(".kt", ""),
    timeout = "short",
    test_class = src.replace("kotlin/", "").replace(".kt", "").replace("/", "."),
    runtime_deps = JUNIT5_DEPS + [":bpmner_tests_lib"],
) for src in _UNIT_TESTS]

# --- Tier 2: Spring context / static analysis tests ---
_SPRING_CONTEXT_TESTS = glob([
    "**/BpmnerModulithTest.kt",
    "**/BpmnerModuleBoundariesTest.kt",
    "**/BpmnConfigBindingTest.kt",
    "**/RepairStartupValidationTest.kt",
    "**/GenerationModuleTest.kt",
    "**/ValidationModuleTest.kt",
    "**/BpmnWebControllerTest.kt",
    "**/BpmnAgentFlowSystemTest.kt",
    "**/BpmnGuardrailSystemTest.kt",
])

[java_junit5_test(
    name = src.split("/")[-1].replace(".kt", ""),
    timeout = "moderate",
    tags = ["spring-context"],
    test_class = src.replace("kotlin/", "").replace(".kt", "").replace("/", "."),
    runtime_deps = JUNIT5_DEPS + [":bpmner_tests_lib"],
) for src in _SPRING_CONTEXT_TESTS]

# --- Tier 3: Shard candidates (explicit java_junit5_test targets) ---
[java_junit5_test(
    name = name,
    timeout = timeout,
    shard_count = shard_count,
    test_class = src.replace("kotlin/", "").replace(".kt", "").replace("/", "."),
    runtime_deps = JUNIT5_DEPS + [":bpmner_tests_lib"],
) for name, src, shard_count, timeout in [
    ("BpmnContractFidelityCheckerTest", "kotlin/dev/groknull/bpmner/generation/BpmnContractFidelityCheckerTest.kt", 4, "moderate"),
    ("BpmnPatchApplierTest", "kotlin/dev/groknull/bpmner/repair/internal/adapter/outbound/BpmnPatchApplierTest.kt", 4, "short"),
    ("PklRuleCatalogTest", "kotlin/dev/groknull/bpmner/rules/internal/domain/PklRuleCatalogTest.kt", 3, "moderate"),
    ("DeterministicPrimitivesTest", "kotlin/dev/groknull/bpmner/rules/internal/domain/primitives/DeterministicPrimitivesTest.kt", 3, "short"),
    ("BpmnDefinitionValidatorTest", "kotlin/dev/groknull/bpmner/validation/BpmnDefinitionValidatorTest.kt", 3, "short"),
    ("TopologyHandlersTest", "kotlin/dev/groknull/bpmner/repair/internal/domain/TopologyHandlersTest.kt", 3, "short"),
    ("BpmnXmlToDefinitionConverterTest", "kotlin/dev/groknull/bpmner/generation/BpmnXmlToDefinitionConverterTest.kt", 2, "moderate"),
    ("BpmnDefinitionToXmlConverterTest", "kotlin/dev/groknull/bpmner/generation/BpmnDefinitionToXmlConverterTest.kt", 2, "moderate"),
]]

# --- Tier 4: Unique exceptions ---
java_junit5_test(
    name = "BpmnNlpConcurrencyTest",
    timeout = "long",
    tags = ["concurrency"],
    test_class = "dev.groknull.bpmner.rules.internal.domain.nlp.BpmnNlpConcurrencyTest",
    runtime_deps = JUNIT5_DEPS + [":bpmner_tests_lib"],
)

java_junit5_test(
    name = "BpmnRepairAgentIntegrationTest",
    timeout = "moderate",
    tags = ["integration"],
    test_class = "dev.groknull.bpmner.repair.BpmnRepairAgentIntegrationTest",
    runtime_deps = JUNIT5_DEPS + [":bpmner_tests_lib"],
)

java_junit5_test(
    name = "ContractVocabularySmokeTest",
    timeout = "eternal",
    env_inherit = [
        "OPENAI_API_KEY",
        "ANTHROPIC_API_KEY",
        "GEMINI_API_KEY",
        "SPRING_PROFILES_ACTIVE",
    ],
    tags = [
        "live-llm",
        "no-remote",
    ],
    test_class = "dev.groknull.bpmner.smoke.ContractVocabularySmokeTest",
    runtime_deps = JUNIT5_DEPS + [":bpmner_tests_lib"],
)

java_junit5_test(
    name = "LiveLlmFullPipelineSmokeTest",
    timeout = "eternal",
    data = ["//samples:prose_samples"],
    env_inherit = [
        "OPENAI_API_KEY",
        "ANTHROPIC_API_KEY",
        "GEMINI_API_KEY",
        "SPRING_PROFILES_ACTIVE",
    ],
    tags = [
        "live-llm",
        "manual",
        "no-remote",
    ],
    test_class = "dev.groknull.bpmner.smoke.LiveLlmFullPipelineSmokeTest",
    runtime_deps = JUNIT5_DEPS + [":bpmner_tests_lib"],
)

ktlint_test(
    name = "ktlint_check",
    srcs = glob(["kotlin/**/*.kt"]),
    config = "//:ktlint_config",
    visibility = ["//visibility:public"],
)
