# Copyright 2026 The Project Contributors
# SPDX-License-Identifier: MIT

load("@contrib_rules_jvm//java:defs.bzl", "java_junit5_test")
load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_kotlin//kotlin:lint.bzl", "ktlint_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//tools/kotlin:spring.bzl", "spring_allopen_plugins")

package(default_visibility = ["//visibility:private"])

sh_test(
    name = "bpmnerAppJarStructureTest",
    srcs = ["jar_structure_test.sh"],
    args = ["$(location //src:bpmner_app.jar)"],
    data = ["//src:bpmner_app.jar"],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "bpmnerAppRunfilesDataTest",
    srcs = ["runfiles_data_test.sh"],
    args = ["$(location //src:bpmner_app)"],
    data = ["//src:bpmner_app"],
    visibility = ["//visibility:public"],
)

kt_jvm_library(
    name = "bpmner_tests_lib",
    srcs = glob(["kotlin/**/*.kt"]),
    associates = ["//src:bpmner_core"],
    plugins = spring_allopen_plugins(),
    resources = glob(["resources/**"]),
    deps = [
        "@maven//:com_embabel_agent_embabel_agent_test",
        "@maven//:com_tngtech_archunit_archunit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_camunda_bpm_model_camunda_bpmn_model",
        "@maven//:org_graalvm_polyglot_js",
        "@maven//:org_graalvm_polyglot_polyglot",
        "@maven//:org_jetbrains_kotlin_kotlin_reflect",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit5",
        "@maven//:org_jmolecules_integrations_jmolecules_archunit",
        "@maven//:org_springframework_boot_spring_boot_starter_test",
        "@maven//:org_springframework_modulith_spring_modulith_starter_test",
        "@maven//:org_xmlunit_xmlunit_assertj",
        "@rules_java//java/runfiles",
    ],
)

java_binary(
    name = "update_prompt_baselines",
    main_class = "dev.groknull.bpmner.prompt.UpdatePromptBaselinesKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":bpmner_tests_lib"],
)

java_binary(
    name = "update_rule_docs",
    main_class = "dev.groknull.bpmner.ruleset.internal.domain.docs.UpdateRuleDocs",
    visibility = ["//visibility:public"],
    runtime_deps = [":bpmner_tests_lib"],
)

java_binary(
    name = "generate_candidate_goldens",
    main_class = "dev.groknull.bpmner.layout.internal.adapter.outbound.GenerateCandidateGoldensKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":bpmner_tests_lib"],
)

filegroup(
    name = "analysis_srcs",
    srcs = glob(["kotlin/**/*.kt"]),
    visibility = ["//visibility:public"],
)

JUNIT5_DEPS = [
    "@maven//:org_junit_jupiter_junit_jupiter_engine",
    "@maven//:org_junit_platform_junit_platform_launcher",
    "@maven//:org_junit_platform_junit_platform_reporting",
]

# Per-class attribute overrides. Every *Test.kt is discovered by the glob below
# and gets one java_junit5_test target; only the exceptions to the defaults
# (timeout = "short", unsharded, no tags) are listed here, keyed by class name.
# New test files are picked up automatically — there is no file list to maintain.
_TIMEOUTS = {
    "AgentDeploymentValidationBootTest": "moderate",
    "AlignmentModuleTest": "moderate",
    "AuthoringModuleTest": "moderate",
    "BpmnAgentFlowSystemTest": "moderate",
    "BpmnConfigBindingTest": "moderate",
    "BpmnContractFidelityCheckerTest": "moderate",
    "BpmnDefinitionToXmlConverterTest": "moderate",
    "BpmnGenerationPipelineTest": "moderate",
    "BpmnGuardrailSystemTest": "moderate",
    "BpmnNlpConcurrencyTest": "long",
    "BpmnRepairAgentIntegrationTest": "moderate",
    "BpmnXmlToDefinitionConverterTest": "moderate",
    "BpmnerModulithTest": "moderate",
    "ConformanceModuleTest": "moderate",
    "ContractModuleTest": "moderate",
    "LayoutModuleTest": "moderate",
    "PipelineModuleTest": "moderate",
    "PklRuleCatalogTest": "moderate",
    "ReadinessModuleTest": "moderate",
    "RepairModuleTest": "moderate",
    "RepairStartupValidationTest": "moderate",
    "RuleSourceParityTest": "moderate",
    "RulesetModuleTest": "moderate",
    "TelemetryModuleTest": "moderate",
}

# Large/slow classes worth fanning across RBE workers. shard_count is a latency
# tool for individually slow targets, not a default — most tests stay unsharded.
_SHARD_COUNTS = {
    "BpmnContractFidelityCheckerTest": 4,
    "BpmnDefinitionToXmlConverterTest": 2,
    "BpmnDefinitionValidatorTest": 3,
    "BpmnPatchApplierTest": 4,
    "BpmnXmlToDefinitionConverterTest": 2,
    "DeterministicPrimitivesTest": 3,
    "PklRuleCatalogTest": 3,
    "TopologyHandlersTest": 3,
}

_TAGS = {
    "AgentDeploymentValidationBootTest": ["spring-context"],
    "AlignmentModuleTest": ["spring-context"],
    "AuthoringModuleTest": ["spring-context"],
    "BpmnAgentFlowSystemTest": ["spring-context"],
    "BpmnConfigBindingTest": ["spring-context"],
    "BpmnGenerationPipelineTest": ["spring-context"],
    "BpmnGuardrailSystemTest": ["spring-context"],
    "BpmnNlpConcurrencyTest": ["concurrency"],
    "BpmnRepairAgentIntegrationTest": ["integration"],
    "BpmnerModulithTest": ["spring-context"],
    "ConformanceModuleTest": ["spring-context"],
    "ContractModuleTest": ["spring-context"],
    "LayoutModuleTest": ["spring-context"],
    "PipelineModuleTest": ["spring-context"],
    "ReadinessModuleTest": ["spring-context"],
    "RepairModuleTest": ["spring-context"],
    "RepairStartupValidationTest": ["spring-context"],
    "RulesetModuleTest": ["spring-context"],
    "TelemetryModuleTest": ["spring-context"],
}

_DATA = {
    "HandlerSourceSanityTest": ["//src:analysis_srcs"],
}

# One java_junit5_test per *Test.kt. Live-LLM smoke tests carry unique
# attributes (env_inherit, data, no-remote) and are declared explicitly below.
[java_junit5_test(
    name = name,
    timeout = _TIMEOUTS.get(name, "short"),
    data = _DATA.get(name, []),
    shard_count = _SHARD_COUNTS.get(name, 1),
    tags = _TAGS.get(name, []),
    test_class = src.replace("kotlin/", "").replace(".kt", "").replace("/", "."),
    runtime_deps = JUNIT5_DEPS + [":bpmner_tests_lib"],
) for src, name in [
    (
        s,
        "RepairFlatBpmnDefinitionMapperTest" if s.endswith("repair/internal/adapter/FlatBpmnDefinitionMapperTest.kt") else s.split("/")[-1].replace(".kt", ""),
    )
    for s in glob(
        ["kotlin/**/*Test.kt"],
        exclude = [
            "kotlin/**/*SmokeTest.kt",
        ],
    )
]]

# --- Live-LLM smoke tests (unique attributes; excluded from the glob above) ---

java_junit5_test(
    name = "ContractVocabularySmokeTest",
    timeout = "eternal",
    env_inherit = [
        "OPENAI_API_KEY",
        "ANTHROPIC_API_KEY",
        "GEMINI_API_KEY",
        "MISTRAL_API_KEY",
        "DEEPSEEK_API_KEY",
        "OPENROUTER_API_KEY",
        "SPRING_PROFILES_ACTIVE",
        "GITHUB_RUN_NUMBER",
        "GITHUB_SHA",
        "GITHUB_HEAD_REF",
        "GITHUB_REF",
    ],
    tags = [
        "live-llm",
        "no-remote",
    ],
    test_class = "dev.groknull.bpmner.smoke.ContractVocabularySmokeTest",
    runtime_deps = JUNIT5_DEPS + [":bpmner_tests_lib"],
)

java_junit5_test(
    name = "LiveLlmFullPipelineSmokeTest",
    timeout = "eternal",
    data = ["//samples:prose_samples"],
    env_inherit = [
        "OPENAI_API_KEY",
        "ANTHROPIC_API_KEY",
        "GEMINI_API_KEY",
        "MISTRAL_API_KEY",
        "DEEPSEEK_API_KEY",
        "OPENROUTER_API_KEY",
        "SPRING_PROFILES_ACTIVE",
    ],
    tags = [
        "live-llm",
        "manual",
        "no-remote",
    ],
    test_class = "dev.groknull.bpmner.smoke.LiveLlmFullPipelineSmokeTest",
    runtime_deps = JUNIT5_DEPS + [":bpmner_tests_lib"],
)

ktlint_test(
    name = "ktlint_check",
    srcs = glob(["kotlin/**/*.kt"]),
    config = "//:ktlint_config",
    visibility = ["//visibility:public"],
)
